# hugging-face-service

./: README.md  pyproject.toml  requirements-all.txt  requirements.txt
src/: main.py  my_service.py
