[project]
name = "hugging-face-service"
version = "1.0.0"

requires-python = ">=3.13"
dependencies = [
    "common-code[test] @ git+https://github.com/swiss-ai-center/common-code.git@main",
    "pydub>=0.25.1",
    "requests>=2.31.0",
    "audioop-lts"
]
[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"
